# test_AVSOFT

./: .gitignore  docker-compose.yaml  init.sql
analyzer/: MysqlManager.py  analyzer_parser.py  config.json  main.py  pyproject.toml  rabbitManager.py
erroneous/: config.json  email_sendler.py  main.py  pyproject.toml
generator/: Dockerfile  config.json  loader.py  pyproject.toml
reader_sage/: Dockerfile  main.py  pyproject.toml  telegram_sendler.py
resource/search/: MDYwMENUWFhEMC5NVFMtVUctRS1PRkZJQ0UgJFAzMzIyMA--.ica  test.txt  Резюме_Волков_Константин.docs
searcher/: Dockerfile  config.json  main.py  pyproject.toml  rabbitManager.py  search.py
