[tool.poetry]
name = "erroneous"
version = "0.1.0"
description = ""
authors = ["Константин <k1st.volkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.8"
aio-pika = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
